<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.sm.jdsa</groupId>
	<artifactId>jdsa</artifactId>
	<version>1.0-SNAPSHOT</version>
	<name>Algorithms in Java</name>
	<description>Algorithms in Java</description>

	<organization>
		<name>Stanislav Markov</name>
		<url>https://mstane@bitbucket.org/mstane</url>
	</organization>

	<issueManagement>
		<url>https://mstane@bitbucket.org/mstane/jdsa/issues</url>
		<system>GitHub Issues</system>
	</issueManagement>

	<scm>
		<url>https://mstane@bitbucket.org/mstane/jdsa</url>
		<connection>scm:git:git://github.com/mstane/jdsa.git</connection>
		<developerConnection>scm:git:git@github.com:mstane/jdsa.git</developerConnection>
		<tag>v1.0</tag>
	</scm>

	<developers>
		<developer>
			<id>mstane</id>
			<name>Stanislav Markov</name>
			<email>mstane@gmail.com</email>
			<organization>mstane</organization>
			<organizationUrl>https://mstane@bitbucket.org/mstane</organizationUrl>
			<roles>
				<role>architect</role>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<properties>
		<java.version>1.8</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>

		<slf4j-api.version>1.7.18</slf4j-api.version>
		<logback.version>1.1.6</logback.version>

		<junit.version>4.12</junit.version>

		<checkstyle.version>6.16.1</checkstyle.version>
		<checkstyle.plugin.version>2.16</checkstyle.plugin.version>
		<pmd.plugin.version>3.4</pmd.plugin.version>
		<findbugs.plugin.version>3.0.3</findbugs.plugin.version>

		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j-api.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-core</artifactId>
			<version>${logback.version}</version>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>${junit.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.puppycrawl.tools</groupId>
			<artifactId>checkstyle</artifactId>
			<version>${checkstyle.version}</version>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${checkstyle.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>${pmd.plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>${findbugs.plugin.version}</version>
					<configuration>
						<!-- <debug>true</debug> -->
						<effort>Max</effort>
						<threshold>Low</threshold>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

</project>

